examples/errors/extends-file-not-found/a.temple
{% extends "b.temple" %}
{% block body %}
stuff
{% end body %}
